@@ -2,15 +2,15 @@ Package: mmtfa
 Type: Package
 Title: Model-Based Clustering and Classification with Mixtures of
         Modified t Factor Analyzers
-Version: 0.1
-Date: 2015-06-13
+Version: 0.3
+Date: 2018-06-11
 Author: Jeffrey L. Andrews, Paul D. McNicholas, and Mathieu Chalifour
-Maintainer: Jeffrey L. Andrews <jeffrey.andrews@macewan.ca>
+Maintainer: Jeffrey L. Andrews <jeff.andrews@ubc.ca>
 Description: Fits a family of mixtures of multivariate t-distributions under a continuous t-distributed latent variable structure for the purpose of clustering or classification. The alternating expectation-conditional maximization algorithm is used for parameter estimation.
 License: GPL (>= 2)
 LazyLoad: yes
 Imports: parallel, mvnfast, matrixStats
-Packaged: 2015-06-13 21:10:01 UTC; jandrews
+Packaged: 2018-06-12 04:36:45 UTC; jeff
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2015-06-14 00:22:42
+Date/Publication: 2018-06-15 07:49:20 UTC
